--- a/package.json
+++ b/package.json
@@ -22,8 +22,16 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/mapped-types": "^1.2.0",
+    "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/swagger": "^6.1.3",
+    "class-validator": "^0.13.2",
+    "firebase-admin": "^11.2.0",
+    "passport": "^0.6.0",
+    "passport-firebase-jwt": "^1.2.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
